added SetsFragment.kt, SetsAdapter.kt

--- a/app/src/main/res/layout/item_set.xml
+++ b/app/src/main/res/layout/item_set.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <androidx.appcompat.widget.AppCompatEditText
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
