need to solve the issue " Execution failed for task ':app:mergeDebugResources'. > A failure occurred while executing com.android.build.gradle.internal.res.ResourceCompilerRunnable "

--- a/app/src/main/res/layout/fragment_sets.xml
+++ b/app/src/main/res/layout/fragment_sets.xml
@@ -13,4 +13,14 @@
         app:layoutManager="LinearLayoutManager"
         tools:listitem="@layout/item_set"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:contentDescription="fab"
+        android:src="@drawable/ic_add_black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
