--- a/app/src/main/res/layout/calendar_header.xml
+++ b/app/src/main/res/layout/calendar_header.xml
@@ -1,80 +1,16 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/legendLayout"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="horizontal"
-    tools:ignore="HardcodedText">
+    android:paddingTop="1dp"
+    android:paddingBottom="1dp">
 
-    <TextView
-        android:id="@+id/legendText1"
-        android:layout_width="0dp"
+    <include
+        android:id="@+id/legendLayout"
+        layout="@layout/calendar_day_legend"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="SUN"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:layout_gravity="center" />
 
-    <TextView
-        android:id="@+id/legendText2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="MON"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
+</FrameLayout>
 
-    <TextView
-        android:id="@+id/legendText3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="TUE"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/legendText4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="WED"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/legendText5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="THU"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/legendText6"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="FRI"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/legendText7"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="SAT"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
-
-</LinearLayout>
