--- a/app/src/main/res/layout/fragment_sets.xml
+++ b/app/src/main/res/layout/fragment_sets.xml
@@ -17,8 +17,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:contentDescription="fab"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="64dp"
         android:src="@drawable/ic_add_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
