--- a/app/src/main/res/layout/set_add.xml
+++ b/app/src/main/res/layout/set_add.xml
@@ -23,14 +23,15 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="16dp"
             app:counterEnabled="true"
-            app:counterMaxLength="10"
-            android:maxLength="10" >
+            app:counterMaxLength="10">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="SetName"
-                android:gravity="center_horizontal"/>
+                android:hint="Name"
+                android:gravity="center_horizontal"
+                android:maxLength="10"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -40,11 +41,10 @@
             app:boxBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1"
             app:counterEnabled="true"
             app:counterMaxLength="150"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/set_name"
+            app:layout_constraintTop_toBottomOf="@id/name"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="64dp">
@@ -53,7 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Description"
-                android:maxLength="150"/>
+                android:maxLength="150"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -75,7 +76,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Time"
                 android:inputType="number"
-                android:maxLength="4"/>
+                android:maxLength="5"
+                android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -97,7 +99,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Calories"
                 android:inputType="number"
-                android:maxLength="4"/>
+                android:maxLength="4"
+                android:singleLine="true"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
