--- a/app/src/main/res/layout/set_item.xml
+++ b/app/src/main/res/layout/set_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/nametv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +32,7 @@
             android:layout_marginEnd="96dp"
             android:text="Time: " />
         <TextView
+            android:id="@+id/caltv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cal: "
