--- a/app/src/main/res/layout/set_item.xml
+++ b/app/src/main/res/layout/set_item.xml
@@ -30,6 +30,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="96dp"
+            android:layout_marginStart="24dp"
             android:text="Time: " />
         <TextView
             android:id="@+id/caltv"
