let's sleep, my dear! We have done hard work today

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -74,7 +74,7 @@
             app:cv_scrollMode="paged" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/calendarRv"
+            android:id="@+id/plannedSetsRv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false" />
