--- a/app/src/main/res/layout/set_item.xml
+++ b/app/src/main/res/layout/set_item.xml
@@ -30,7 +30,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="96dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="40dp"
             android:text="Time: " />
         <TextView
             android:id="@+id/caltv"
@@ -40,7 +40,8 @@
             app:layout_constraintStart_toEndOf="@id/timetv"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="40dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
