CALENDAR IS DONE!

--- a/app/src/main/res/layout/calendar_day.xml
+++ b/app/src/main/res/layout/calendar_day.xml
@@ -20,7 +20,7 @@
             tools:text="24" />
 
         <View
-            android:id="@+id/dayFlightBottom"
+            android:id="@+id/dayCheck"
             android:layout_width="match_parent"
             android:layout_height="4dp"
             android:layout_gravity="bottom"
