--- a/app/src/main/res/layout/fragment_choose_set.xml
+++ b/app/src/main/res/layout/fragment_choose_set.xml
@@ -22,7 +22,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/white" />
 
     <Button
         android:id="@+id/time_picker_btn"
