--- a/app/src/main/res/layout/fragment_statistic.xml
+++ b/app/src/main/res/layout/fragment_statistic.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="96dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,20 +28,24 @@
         android:layout_marginTop="16dp">
 
         <TextView
+            android:text="AVG. SET TIME"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="16dp" />
+            android:layout_marginStart="16dp"
+            android:textStyle="bold" />
 
         <TextView
+            android:text="AVG. SET CALORIES"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginEnd="16dp"
+            android:textStyle="bold" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -51,15 +56,22 @@
         app:layout_constraintTop_toBottomOf="@id/avg_tv"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:gravity="center" />
 
     <TextView
         android:id="@+id/avg_time_tv"
+        android:textStyle="bold"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/avg_tv"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:gravity="center" />
     <TextView
         android:id="@+id/quote_tv"
@@ -70,8 +82,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textStyle="italic"/>
     <TextView
         android:id="@+id/author_tv"
         android:gravity="center"
@@ -82,7 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/quote_tv"
         android:layout_marginBottom="128dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
