--- a/app/src/main/res/layout/set_add.xml
+++ b/app/src/main/res/layout/set_add.xml
@@ -47,14 +47,13 @@
             app:layout_constraintTop_toBottomOf="@id/name"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="64dp">
+            android:layout_marginTop="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Description"
-                android:maxLength="150"
-                android:singleLine="true"/>
+                android:maxLength="150" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
