--- a/app/src/main/res/layout/set_calendar_item.xml
+++ b/app/src/main/res/layout/set_calendar_item.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/calendar_item_background">
 
         <TextView
             android:id="@+id/calendar_nametv"
@@ -20,6 +21,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:textStyle="bold"
             android:text="SetName"/>
         <TextView
             android:id="@+id/calendar_timetv"
