--- a/app/src/main/res/layout/fragment_choose_set.xml
+++ b/app/src/main/res/layout/fragment_choose_set.xml
@@ -17,13 +17,14 @@
         android:id="@+id/time_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:timePickerMode="spinner"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/white" />
+        android:background="@drawable/timepeeker_background"
+        android:animateLayoutChanges="true"/>
 
     <Button
         android:id="@+id/time_picker_btn"
@@ -33,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@id/time_picker"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
