--- a/app/src/main/res/layout/set_choose_item.xml
+++ b/app/src/main/res/layout/set_choose_item.xml
@@ -20,7 +20,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="SetName"/>
+            android:text="SetName"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/choose_timetv"
             android:layout_width="wrap_content"
@@ -31,7 +32,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="96dp"
             android:layout_marginStart="40dp"
-            android:text="Time: " />
+            android:text="Time: "
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/choose_caltv"
             android:layout_width="wrap_content"
@@ -41,7 +43,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="40dp"/>
+            android:layout_marginEnd="40dp"
+            android:textStyle="bold"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
