--- a/app/src/main/res/layout/set_item.xml
+++ b/app/src/main/res/layout/set_item.xml
@@ -3,63 +3,74 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="24dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    app:cardCornerRadius="3dp">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/nametv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
-            android:text="SetName"/>
-        <TextView
-            android:id="@+id/timetv"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/header_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:text="Time: " />
-        <TextView
-            android:id="@+id/caltv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cal: "
-            app:layout_constraintStart_toEndOf="@id/timetv"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="20dp"/>
+            app:layout_constraintEnd_toEndOf="parent">
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/nametv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="20dp"
+                android:text="SetName"/>
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/timetv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginStart="40dp"
+                android:text="Time: " />
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/caltv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cal: "
+                app:layout_constraintStart_toEndOf="@id/timetv"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Description"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="52dp"
-            android:layout_marginStart="8dp" />
+        <View
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toBottomOf ="@id/header_title"
+            android:background="@color/grey"
+            app:layout_constraintBottom_toTopOf="@id/description_tv"
+            android:layout_marginTop="44dp" />
+
         <TextView
             android:id="@+id/description_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="DESCRIPTION"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/line"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="48dp"
             android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
             android:maxWidth="300dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
