--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,7 @@
     <color name="green_200">#1E6F5C</color>
     <color name="green_500">#289672</color>
     <color name="green_700">#29BB89</color>
-    <color name="green">#3C9576</color>
-    <color name="yellow">#E6DD3B</color>
+    <color name="green_900">#B8F1B0</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
