--- a/app/src/main/res/layout/fragment_sets.xml
+++ b/app/src/main/res/layout/fragment_sets.xml
@@ -7,6 +7,17 @@
     tools:context=".ui.sets.SetsFragment"
     android:background="@drawable/gradient_background">
 
+    <TextView
+        android:id="@+id/nosets_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="You have no sets. Press button to add one"
+        android:visibility="gone"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
