--- a/app/src/main/res/layout/set_calendar_item.xml
+++ b/app/src/main/res/layout/set_calendar_item.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/calendar_nametv"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="96dp"
             android:layout_marginStart="40dp"
